first implementation scetch of path prohibition transformation